# bspc

./: .git-blame-ignore-revs  CMakeLists.txt  Makefile  README.md  aas_cfg.c  aas_create.c  aas_facemerging.c  aas_file.c  aas_gsubdiv.c  bspc.c  faces.c  gldraw.c  glfile.c  l_bsp_ent.c  l_bsp_hl.h  l_bsp_q1.h  l_bsp_q2.c  l_bsp_q3.h  l_cmd.c  l_cmd.h  l_log.c  l_log.h  l_poly.c  l_qfiles.c  l_utils.h  leakfile.c  map_hl.c  map_q1.c  map_q3.c  portals.c  prtfile.c  q2files.h  qbsp.h  tetrahedron.c  tetrahedron.h  writebsp.c
.github/workflows/: build.yml
code/: aas_areamerging.c  aas_edgemelting.c  aas_facemerging.c  aas_file.c  aas_gsubdiv.c  aas_map.c  aas_prunenodes.c  aas_store.c  be_aas_bspc.c  brushbsp.c  bspc.c  cfgq3.c  csg.c  l_bsp_hl.c  l_bsp_q1.c  l_bsp_q2.h  l_bsp_q3.c  l_bsp_sin.c  l_bsp_sin.h  l_cmd.c  l_cmd.h  l_log.c  l_log.h  l_math.c  l_math.h  l_mem.c  l_mem.h  l_poly.h  l_qfiles.c  l_qfiles.h  l_threads.c  l_utils.c  map.c  map_hl.c  map_q2.c  map_q3.c  map_sin.c  portals.c  q3files.h  qbsp.h  (+3 more)
